--- a/css/style.scss
+++ b/css/style.scss
@@ -30,7 +30,8 @@ img {
 // Main Styles
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+
   background: #222;
 }
 
@@ -62,6 +63,41 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: #fff;
+    font-weight: 300;
   }
 
+.section {
+  padding-left: 7vw;
+  padding-right: 7vw;
+  background-color: #fff;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+  .section__content {
+    max-width: 550px;
+  }
+
+    .section__title {
+      font-weight: 200;
+      line-height: 1.4;
+      font-size: 50px;
+      letter-spacing: 0.02em;
+      margin-bottom: 50px;
+    }
+
+    .section__text {
+      font-weight: 300;
+      line-height: 2;
+      font-size: 22px;
+      color: #666666;
+    }
+
+  .section__image {
+    max-width: 600px;
+  }
 
