--- a/css/style.scss
+++ b/css/style.scss
@@ -35,13 +35,34 @@ body {
 }
 
 .hero {
-  background: url(/assets/hero-bg.jpg) no-repeat center center fixed;
   background-size: cover;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;  
   padding: 20px;
+  background: linear-gradient(271deg, #ca7777, #a2eabf);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 18s ease infinite;
+  -moz-animation: AnimationName 18s ease infinite;
+  animation: AnimationName 18s ease infinite;
+
+  @-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 51%}
+    100%{background-position:0% 50%}
+  }
+  @-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 51%}
+    100%{background-position:0% 50%}
+  }
+  @keyframes AnimationName { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 51%}
+    100%{background-position:0% 50%}
+  }
 }
 
   .hero__content {
