--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,300i,400,400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <html>
