--- a/css/style.scss
+++ b/css/style.scss
@@ -31,132 +31,222 @@ img {
 
 body {
   font-family: 'Nunito Sans', sans-serif;
-  background: #222;
+  background: #fff;
 }
 
-.hero {
-  background: url(/assets/hero-bg.jpg) no-repeat center center fixed;
-  background-size: cover;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;  
-  padding: 20px;
-}
-
-  .hero__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .hero__logo {
-    width: 615px;
-    max-width: 100%;
-    margin-bottom: 50px;
-  }
-
-  .hero__welcome {
-    text-align: center;
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #fff;
-    font-weight: 300;
-  }
-
-.section {
-  padding-left: 7vw;
-  padding-right: 7vw;
-  background-color: #fff;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  color: #000000;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-  .section__content {
-    max-width: 550px;
-  }
-
-    .section__title {
-      font-weight: 300;
-      line-height: 1.4;
-      font-size: 50px;
-      letter-spacing: 0.02em;
-      margin-bottom: 50px;
-    }
-
-    .section__text {
-      font-weight: 300;
-      line-height: 2;
-      font-size: 22px;
-      color: #959595;
-    }
-
-  .section__image {
-    max-width: 640px;
-  }
-
-.team-cards {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  height: 840px;
-}
-
-.team-card { 
-  position: relative;
-  width: 280px; 
-  height: 410px;
-  box-shadow: 0px 40px 80px rgba(0, 0, 0, 0.15);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #fff;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-end;
-  align-content: flex-end;
-  padding: 20px;
-  margin: 10px;
-}
-
-.team-card:before {
-  content: ' ';
+.nav {
   position: absolute;
+  z-index: 100;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-  background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.4));
+  height: 85px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
-  .team-card__name {
-    z-index: 10;
-    font-size: 24px;
+  .nav a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .nav__logo {
+    display: block;
+    height: 24px;
+  }
+
+  .nav__menu {
+    display: flex;
+    font-weight: 600;
+    line-height: normal;
+    font-size: 12px;
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+
+  .nav__menu li {
+    margin-left: 30px;
+  }
+
+.hero {
+  position: relative;
+  height: 985px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;  
+  padding-left: 100px;
+  padding-right: 100px;
+  overflow: hidden;
+
+  background-image: linear-gradient(-90deg, #D4837E 0%, #D1B189 20%, #CACE93 40%, #B1CB9D 60%, #A7C9AA 80%, #B0C8BE 100%);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
+  
+  @-webkit-keyframes AnimationName {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+  @-moz-keyframes AnimationName {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+  @keyframes AnimationName { 
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+}
+
+  .hero__welcome {
+    text-align: left;
+    font-size: 80px;
+    color: #fff;
+    font-weight: 200;
+    width: 600px;
+    line-height: normal;
+  }
+
+  .hero__image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 566px;
+    display: block;
+  }
+
+.about {
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+  .about__title {
+    font-weight: 200;
+    line-height: 1.38em;
+    font-size: 50px;
+    letter-spacing: 0.02em;
+    margin-right: 50px;
+    color: #1a1a1a;
+    flex: 600;
+  }
+
+  .about__text {
     font-weight: 300;
-    letter-spacing: 0.05em;
-    line-height: 1;
-    margin-bottom: 20px;
+    font-size: 20px;
+    line-height: 1.9em;
+    color: #959595;
+    flex: 500;
+  }
+
+
+.team {
+  padding-left: 100px;
+  margin-bottom: 150px;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+}
+
+  .team__image {
+    min-width: 510px;
+    padding-right: 30px;
+  }
+
+  .team__image:last-child {
+    min-width: 580px;
+    padding-right: 100px;
+  }
+
+.work {  
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 150px;
+  padding-bottom: 300px;
+  background-image: url(/assets/work.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+}
+  .work__title {
+    font-weight: 200;
+    line-height: 1.38em;
+    font-size: 50px;
+    letter-spacing: 0.02em;
+    margin-bottom: 50px;
+    width: 600px;
+  }
+
+  .work__text {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.9em;
+    width: 600px;
+  }
+
+.contact {  
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 150px;
+    padding-bottom: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+
+  .contact__content {
+    flex: 600;
+  }
+
+  .contact__form {
+    flex: 500;
+  }
+
+  .contact__title {
+    font-weight: 200;
+    line-height: 1.38em;
+    font-size: 50px;
+    letter-spacing: 0.02em;
+    margin-right: 100px;
+    color: #1a1a1a;
+    margin-bottom: 50px;
+    width: 600px;
+  }
+
+  .contact__text {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.9em;
+    color: #959595;
+    width: 600px;
+  }
+
+  .contact__form label {
+    font-weight: 300;
+    font-size: 16px;
+    color: #959595;
+  }
+
+  .field {
+    display: block;
+    background-color: #F5F5F5;
+    border: none;
+    height: 60px;
     width: 100%;
+    margin-bottom: 30px;
   }
-
-  .team-card__tag {
-    z-index: 10;
-    font-size: 14px;
-    font-weight: 300;
-    letter-spacing: 0.05em;
-    line-height: 1;
-    margin-right: 10px;
-    border: 1px solid;
-    padding: 5px 10px;
-  }
-
-
-
-
