hide horizontal scrollbar on team section

--- a/css/style.scss
+++ b/css/style.scss
@@ -159,7 +159,12 @@ body {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
 }
+  .team::-webkit-scrollbar { /* WebKit */
+    width: 0px;
+  } 
 
   .team__image {
     min-width: 510px;
