fix mobile safari button gradient/border radius

--- a/css/style.scss
+++ b/css/style.scss
@@ -373,4 +373,6 @@ body {
     text-align: center;
     border: none;
     letter-spacing: 0.06em;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
   }
