--- a/css/style.scss
+++ b/css/style.scss
@@ -73,8 +73,8 @@ body {
   }
 
 .section {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
   .section__title {
@@ -114,7 +114,7 @@ body {
   justify-content: flex-start; 
   flex-wrap: wrap; 
 
-  padding-top: 200px;
+  padding-top: 130px;
   overflow: hidden;
 
   background-image: linear-gradient(-90deg, #D4837E 0%, #D1B189 20%, #CACE93 40%, #B1CB9D 60%, #A7C9AA 80%, #B0C8BE 100%);
@@ -144,7 +144,7 @@ body {
   .hero__welcome {
     z-index: 10;
     text-align: center;
-    font-size: 40px;
+    font-size: 36px;
     color: #fff;
     font-weight: 200;
     width: 100%;
@@ -167,7 +167,7 @@ body {
 
 @media only screen and (min-width: 1100px) {
   .hero {
-    height: 985px;
+    height: 100vh;
     padding-top: 0;
   }
 
@@ -189,8 +189,8 @@ body {
 // About Section
 
 .about {
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 50px;
+  padding-bottom: 75px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -198,12 +198,22 @@ body {
 }
 
   .about__title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     color: #1a1a1a;
   }
 
   .about__text {
     color: #959595;
+  }
+
+  @media only screen and (min-width: 600px) {
+    .about {
+      padding-top: 150px;
+    }
+    
+  .about__title {
+    margin-bottom: 50px;
+    }
   }
 
   @media only screen and (min-width: 1100px) {
@@ -226,8 +236,8 @@ body {
 // Team Section
 
 .team {
-  padding-left: 20px;
-  margin-bottom: 150px;
+  padding-left: 30px;
+  margin-bottom: 30px;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
@@ -254,6 +264,7 @@ body {
   @media only screen and (min-width: 600px) {
     .team {
       padding-left: 100px;
+      margin-bottom: 150px;
     }
 
     .team__image {
@@ -270,8 +281,8 @@ body {
 // Work Section
 
 .work { 
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 50px;
+  padding-bottom: 60px;
   background-image: url(/assets/work.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -284,7 +295,12 @@ body {
   .work__title {
     margin-bottom: 50px;
   }
-
+  @media only screen and (min-width: 600px) {
+    .work {
+      padding-top: 150px;
+      padding-bottom: 150px;
+    }
+  }
   @media only screen and (min-width: 1100px) {
     .work {
       padding-bottom: 300px;
@@ -298,7 +314,7 @@ body {
 // Contact Section
 
 .contact {  
-    padding-top: 150px;
+    padding-top: 50px;
     padding-bottom: 150px;
     display: flex;
     flex-wrap: wrap;
@@ -317,6 +333,12 @@ body {
 
   .contact__form {
     flex: 1;
+  }
+
+  @media only screen and (min-width: 600px) {
+    .contact {
+      padding-top: 150px;
+    }
   }
 
   @media only screen and (min-width: 820px) {
