--- a/css/style.scss
+++ b/css/style.scss
@@ -159,6 +159,7 @@ body {
     right: -13%;
   }
 
+
 @media only screen and (min-width: 600px) {
   .hero__welcome {
     font-size: 60px;
@@ -183,6 +184,33 @@ body {
       right: 0;
       bottom: 0;
       width: 566px;
+    }
+
+    .scroll-arrow {
+      width: 26px;
+      height: 15px;
+      background-image: url(/assets/scroll-arrow.svg);
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      margin-left: -13px;
+    }
+    .bounce {
+      -moz-animation: bounce 2s infinite;
+      -webkit-animation: bounce 2s infinite;
+      animation: bounce 2s infinite;
+    }
+    
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-30px);
+      }
+      60% {
+        transform: translateY(-15px);
+      }
     }
   }
 
