update small screen styles

--- a/css/style.scss
+++ b/css/style.scss
@@ -27,6 +27,11 @@ img {
   height: auto;
 }
 
+input {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+}
+
 // Main Styles
 
 body {
@@ -78,10 +83,9 @@ body {
 }
 
   .section__title {
-    font-size: 30px;
+    font-size: 28px;
     font-weight: 200;
     line-height: 1.38em;
-    letter-spacing: 0.02em;
   }
 
   .section__text {
@@ -98,6 +102,7 @@ body {
 
     .section__title {
       font-size: 50px;
+      letter-spacing: 0.02em;
     }
 
     .section__text {
@@ -169,6 +174,7 @@ body {
 @media only screen and (min-width: 1100px) {
   .hero {
     height: 100vh;
+    max-height: 1000px;
     padding-top: 0;
   }
 
@@ -183,7 +189,7 @@ body {
       position: absolute;
       right: 0;
       bottom: 0;
-      width: 566px;
+      width: 60vh;
     }
 
     .scroll-arrow {
